--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -97,6 +97,28 @@ header a:hover {
     color: var(--on-nav-bg);
 }
 
+.nav.item a{
+    position: relative;
+}
+
+.nav.item a::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background: var(--logo-highlight);
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
+}
+
+.nav.item a:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
+}
+
 .countdown-section {
     /* background: var(--nav-bg); */
     color: var(--on-nav-bg);
