--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -106,7 +106,7 @@ header a:hover {
     position: absolute;
     width: 100%;
     height: 2px;
-    bottom: 0;
+    bottom: -0.25rem;
     left: 0;
     background: var(--logo-highlight);
     visibility: hidden;
