--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -30,7 +30,7 @@ h6,
 }
 
 section h1 {
-    font-size: 2rem;
+    font-size: 1.4rem;
 }
 
 header a, 
@@ -201,6 +201,7 @@ header {
 
 .nav.item.ham {
     display: block;
+    margin: 0.5rem 0;
 }
 
 .nav.item {
@@ -418,6 +419,10 @@ fieldset {
 
     .countdown-data .logo-sm {
         font-size: 1.8rem;
+    }
+
+    section h1 {
+        font-size: 2rem;
     }
 
  }
