--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -256,6 +256,10 @@ footer {
     background-image: url("/2021/images/growth-path-w1280x1707.webp");
 }
 
+.about {
+    background-image: url("/2021/images/equipment-w1280x853.webp");
+}
+
 .parallax {
     background-position: center;
     background-repeat: no-repeat;
