--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -105,7 +105,7 @@ header a:active,
 /* Color */
 
 html,
-footer, {
+footer {
     background: var(--html-bg);
     color: var(--on-nav-bg-soft);
 }
