--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -169,10 +169,6 @@ header a:hover {
     border-radius: 0.75rem;
 }
 
-.faq li {
-    border-bottom: 3px solid var(--btn-bg);
-}
-
 .non-fields button,
 .non-fields .button {
     background: var(--btn-bg);
@@ -422,6 +418,12 @@ fieldset {
 .faq ul {
     list-style: none;
     padding: 0;
+    margin: 0;
+}
+
+.faq li {
+    border-bottom: 3px solid var(--btn-bg);
+    margin-bottom: 1.5rem;
 }
 
 .collapsible-btn {
