--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -103,6 +103,14 @@ header a:active,
     font-weight: 700;
 }
 
+.collapsible-btn {
+    font-size: 1.17em;
+}
+
+.expander {
+    font-size: 1.5em;
+}
+
 /* Color */
 
 html,
@@ -431,7 +439,9 @@ fieldset {
     border: none;
     outline: none;
     text-align: left;
-    margin-bottom: 0.5rem;;
+    margin-bottom: 0.5rem;
+    display: flex;
+    justify-content: space-between;
 }
 
 .collapsible-content {
