--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -207,7 +207,8 @@ header a:hover {
     color: var(--on-nav-bg);
 }
 
-input:read-only {
+input:read-only,
+textarea:read-only {
     background-color: var(--read-only);
 }
 
