--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -13,7 +13,7 @@
     --border-intense: #de4b43;
     --btn-bg: #2f375b;
     --btn-bg-soft: #de4b43;
-    --read-only: #cccccc;
+    --read-only: #dddddd;
 }
 
 /* Typography */
