--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -108,7 +108,7 @@ header a:active,
     font-size: 1.17em;
 }
 
-.legal-sm {
+p.legal-sm {
     font-size: x-small;
 }
 
@@ -469,9 +469,9 @@ fieldset {
     margin: 0 0 1rem; 
 }
 
-.legal-sm {
+p.legal-sm {
     text-align: right;
-    margin: 0;
+    margin: 0.25rem 0 0;
     padding: 0;
 }
 
