--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -559,6 +559,11 @@ p.legal-sm {
         width: 60%;
         margin: 0 auto;
     }
+
+    .about-content{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 
