--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -263,6 +263,11 @@ img.responsive {
     height: auto;
 }
 
+img.responsive.img-50 {
+    max-width: 50%;
+    height: auto;
+}
+
 section {
     padding: 1rem;
 }
