--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -509,6 +509,11 @@ p.legal-sm {
     section h1 {
         font-size: 2rem;
     }
+
+    img.responsive.img-sm {
+        max-width: 75%;
+        height: auto;
+    }
  }
 
 @media only screen and (min-width: 30rem) {
@@ -533,9 +538,8 @@ p.legal-sm {
         padding: 1rem 3rem;
     }
 
-    img.responsive.img-50 {
+    img.responsive.img-sm {
         max-width: 50%;
-        height: auto;
     }
 }
 
