--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -576,8 +576,9 @@ p.legal-sm {
         gap: 1rem;
     }
 
-    .pillars-content h3{
-        grid-column: 1 / -1;
+    .pillars-content img{
+        grid-column: 2 / -1;
+        grid-row: 1 / -1;
     }
 
     
