--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -574,7 +574,11 @@ p.legal-sm {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 1rem;
-    }    
+    }
+
+    .pillars-content:nth-child(even) + div{
+        grid-column: 2 / -1;
+    }
 }
 
 @media only screen and (min-width: 75rem) {  
