--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -576,8 +576,8 @@ p.legal-sm {
         gap: 1rem;
     }
 
-    .pillars-content:nth-of-type(odd) + div{
-        background: blue;
+    .pillars-content:nth-of-type(odd) div{
+        grid-column: 2 / -1;
     }
 }
 
