--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -565,6 +565,10 @@ p.legal-sm {
         border-radius: 0.5rem
     }
 
+    .menu{
+    text-align: right;
+}
+
     .section-center {
         width: 60%;
         margin: 0 auto;
