--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -477,6 +477,10 @@ p.legal-sm {
     padding: 0;
 }
 
+.hidden {
+    display: none;
+}
+
 @supports not (-webkit-touch-callout: none) {
     /* CSS for other than iOS devices */ 
     .parallax {
