--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -241,6 +241,10 @@ footer {
     padding: 0.25rem 0.25rem 1rem;
 }
 
+footer hr{
+    width: 75%;
+}
+
 .nav.item.ham {
     display: block;
     margin: 0.5rem 0;
