--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -603,7 +603,7 @@ p.legal-sm {
         margin-top: 1.25rem;
     }
 
-    .pillars-content:nth-of-type(odd) div{
+    .pillars-content:nth-of-type(even) div{
         grid-column: 2 / -1;
     }
 
