--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -603,6 +603,10 @@ p.legal-sm {
         margin-top: 1.25rem;
     }
 
+    .pillars-content h3 {
+        margin: 0 0 1rem; 
+    }
+
     .pillars-content:nth-of-type(odd) div{
         grid-column: 2 / -1;
     }
