--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -490,6 +490,11 @@ p.legal-sm {
     display: none;
 }
 
+.attributions {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .attributions img{
     max-width: 100%;
 }
