--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -47,7 +47,9 @@ header a:active,
     text-decoration: none;
 }
 
-
+footer {
+    font-size: 0.75rem;
+}
 
 .camp-yr-logo {
     text-transform: uppercase;
