--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -119,7 +119,7 @@ p.legal-sm {
     font-size: x-small;
 }
 
-.attributations figcaption {
+.attributions figcaption {
     font-size: 0.75rem;
 }
 
