--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -314,16 +314,12 @@ footer,
     background-image: url("/2021/images/growth-path-w1280x1707.webp");
 }
 
-.parallax {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    -webkit-background-size: cover;
-    padding: 0;
-}
-
 .equipment {
     background-image: url("/2021/images/equipment-w1280x1707.webp");
+}
+
+.parallax,
+.equipment {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
