--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -314,12 +314,7 @@ footer,
     background-image: url("/2021/images/growth-path-w1280x1707.webp");
 }
 
-.equipment {
-    background-image: url("/2021/images/equipment-w1280x853.webp");
-}
-
-.parallax,
-.equipment {
+.parallax {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
