--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -265,7 +265,7 @@ footer hr{
 .nav.item {
     display: none;
     opacity: 0;
-    transition: opacity 2s ease-in;
+    transition: opacity 2s ease-in-out;
 }
 
 .responsive .nav.item {
