--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -286,7 +286,7 @@ section {
     padding: 0;
     margin: 0;
     opacity: 0;
-    transition: opacity 2s ease-in-out;
+    transition: opacity 4s ease-in;
 }
 
 .nav-ul.responsive {
