--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -276,15 +276,12 @@ section {
     list-style: none;
     padding: 0;
     margin: 0;
+    opacity: 0;
+    display: none;
     transition: opacity 2s ease-in;
 }
 
-.nav-ul:not(.responsive) {
-    opacity: 0;
-    display: none;
-}
-
-.nav-ul.responsive {
+.nav-resp {
     opacity: 1;
     display: grid;
 }
