--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -272,22 +272,25 @@ section {
 }
 
 .nav-ul {
+    display: none;
     gap: 0.5rem;
     list-style: none;
     padding: 0;
     margin: 0;
-    opacity: 0;
-    display: none;
-    transition: opacity 2s ease-in;
 }
 
-.nav-resp {
-    opacity: 1;
+.nav-resp {    
     display: grid;
 }
 
 .nav-ul li{
     margin: 0 1rem;
+    opacity: 0;    
+    transition: opacity 2s ease-in;
+}
+
+.nav-resp li {
+    opacity: 1;
 }
 
 .countdown {
