--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -277,21 +277,20 @@ section {
     list-style: none;
     padding: 0;
     margin: 0;
+    opacity: 0;
+    transition: opacity 2s ease-in;
 }
 
-.nav-resp {    
+.nav-ul.nav-resp {    
     display: grid;
+    opacity: 1;
+
 }
 
 .nav-ul li{
     margin: 0 1rem;
-    opacity: 0;    
-    transition: opacity 2s ease-in;
 }
 
-.nav-resp li {
-    opacity: 1;
-}
 
 .countdown {
     margin-bottom: 1.5rem;
