--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -278,7 +278,7 @@ section {
     padding: 0;
     margin: 0;
     opacity: 0;
-    transition: all 1s ease-in;
+    transition: opacity 1s ease-in, display 0s 1s linear;
 }
 
 .nav-ul.nav-resp {    
