--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -272,27 +272,19 @@ section {
 }
 
 .nav-ul {
-    display: grid;
+    display: none;
     gap: 0.5rem;
     list-style: none;
     padding: 0;
     margin: 0;
-    opacity: 0;
-    transition: opacity 1s ease-in;
-}
-
-.nav-ul.nav-resp {    
-    opacity: 1;
 }
 
 .nav-ul li{
     margin: 0 1rem;
-    display: none;
-    transition: display 0s 1s linear;
 }
 
-.nav-ul.nav-resp li {
-    display: block;
+.nav-unhide {
+    display: grid;
 }
 
 
