--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -277,6 +277,7 @@ section {
     list-style: none;
     padding: 0;
     margin: 0;
+    transition: all 1s linear;
 }
 
 .nav-ul li{
@@ -287,6 +288,9 @@ section {
     display: none;
 }
 
+.nav-hide {
+    opacity: 0;
+}
 
 .countdown {
     margin-bottom: 1.5rem;
