--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -403,6 +403,7 @@ fieldset {
 .fields-radio {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .fields-radio label,
