--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -522,7 +522,15 @@ p.legal-sm {
 }
 
 .special-instructions {
-    margin-left: 1rem;
+    margin-left: 1rem;    
+}
+
+#selfMedicateN + label .special-instructions {
+    transition: all .2s ease-in-out;
+}
+
+#selfMedicateN:hover + label .special-instructions {
+    transform: scale(2.0);
 }
 
 @supports not (-webkit-touch-callout: none) {
