--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -527,6 +527,10 @@ p.legal-sm {
     background: white;
 }
 
+.inline-block {
+    display: inline-block;
+}
+
 #selfMedicateN + label .special-instructions {
     transition: all .2s ease-in-out;
 }
