--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -18,6 +18,12 @@
 }
 
 .message {
+    background: var(--nav-bg);
+    color: var(--on-nav-bg);
+    padding: 1rem;
+}
+
+.alert {
     background: var(--border-intense);
     color: var(--on-nav-bg);
     padding: 1rem;
