--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -443,6 +443,8 @@ a.button {
     background: var(--btn-bg);
     color: var(--logo-highlight);
     border: 1px solid var(--border-intense);
+    border-radius: 0.25rem;
+    padding: 0.25rem;
 }
 
 .non-fields button {
