--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -445,6 +445,7 @@ a.button {
     border: 1px solid var(--border-intense);
     border-radius: 5rem;
     padding: 0.25rem;
+    text-decoration: none;
 }
 
 .non-fields button {
