--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -444,7 +444,7 @@ a.button {
     color: var(--logo-highlight);
     border: 1px solid var(--border-intense);
     border-radius: 5rem;
-    padding: 0.25rem;
+    padding: 0 1rem 0.25rem;
     text-decoration: none;
 }
 
