--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -438,6 +438,10 @@ fieldset {
     width: 100%;
 }
 
+.register-block {
+    margin: 0.5rem;
+}
+
 a.button {
     font-size: 1.25rem;
     background: var(--border-intense);
@@ -446,7 +450,6 @@ a.button {
     border-radius: 5rem;
     padding: 0 1rem 0.25rem;
     text-decoration: none;
-    margin: 0.5rem;
 }
 
 .non-fields button {
