--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -588,10 +588,6 @@ p.legal-sm {
 ul.re-affirm-details {
     list-style: none;
     padding: 0;
-    margin: 0;
-}
-
-ul.re-affirm-details li {
     margin: 1rem 0;
 }
 
@@ -602,6 +598,10 @@ ul.re-affirm-details li {
     color: var(--on-body-bg);
     font-size: 1rem;
     opacity: 1;
+}
+
+ul.re-affirm-details span {
+    font-weight: bold;
 }
 
 @supports not (-webkit-touch-callout: none) {
