--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -588,7 +588,8 @@ p.legal-sm {
 ul.re-affirm-details {
     list-style: none;
     padding: 0;
-    margin: 1rem 0;
+    margin: 1.5rem 0;
+    border: 2px groove darkgray;
 }
 
 .select-disabled {
@@ -598,10 +599,6 @@ ul.re-affirm-details {
     color: var(--on-body-bg);
     font-size: 1rem;
     opacity: 1;
-}
-
-ul.re-affirm-details span {
-    font-weight: bold;
 }
 
 @supports not (-webkit-touch-callout: none) {
