--- a/web/2021/css/style.css
+++ b/web/2021/css/style.css
@@ -592,6 +592,10 @@ ul.re-affirm-details {
     border: 2px groove darkgray;
 }
 
+ul.re-affirm-details li{
+    margin: 0.25rem;
+}
+
 .select-disabled {
     -moz-appearance: none;
     -webkit-appearance: none;
